syntax = "proto3";

package proto;

service ImageService {
  rpc SendImage (SendImageRequest) returns (SendImageResponse) {}
}

message SendImageRequest {
  bytes image = 1; 
}
  
message SendImageResponse {
  string message = 1; 
}